# neural-field-gpu

./: .gitignore  CMakeLists.txt  README.md  bench_gpu.csv  bench_size.csv  proposal.md
docs/: Makefile  writeup.bib  writeup.md  writeup.tex
scripts/: benchmark.sh  build_local.sh  job_single.sh  job_sweep.sh  make_video.sh  plot_scaling.py  smoke_test.sh
src/: io.cpp  io.hpp  kernels.cuh  main.cu
